# boilerplate-daemonContext

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.cmake/: version.cpp.in  version.hpp.in
examples/: CMakeLists.txt
examples/app-context/: CMakeLists.txt
examples/app-context/include/: appContext.hpp  appContextBase.hpp  app_event.hpp
examples/app-context/src/: main.cpp
lib/: CMakeLists.txt  daemon.cpp
lib/include/: daemon.hpp  daemon_config.hpp
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  daemonConfig.hpp  main.cpp
src/daemon_app/: CMakeLists.txt  app_context.cpp  main.cpp
src/daemon_app/include/: app_context.hpp  app_context_base.hpp  app_utilities.hpp
src/daemon_simple/: CMakeLists.txt  main.cpp
src/daemon_simple/include/: daemon.hpp  daemonConfig.hpp
src/daemon_simple/src/: daemon.cpp  main.cpp
src/daemon_with_context/: CMakeLists.txt
src/daemon_with_context/include/: appContext.hpp  appContextBase.hpp  daemon.hpp  daemonConfig.hpp
src/daemon_with_context/src/: appContext.cpp  daemon.cpp  main.cpp
src/include/: daemon.hpp
src/src/: daemon.cpp  main.cpp
src/task-abstracting/: CMakeLists.txt  main.cpp  taskController.hpp
src/task-abstracting/include/: taskApp.hpp
src/task-abstracting/src/: main.cpp  taskApp.cpp
